# DRS4ROOT

./: CMakeCache.txt  CMakeLists.txt  DRS4ROOT.cpp  GetROOt.sh  GetRoot.sh  README.md
configfiles/: filelist.txt
include/: BinDecode.h
src/: BinDecode.cpp
